syntax = "proto3";

package user_center;

option go_package = "./v1;v1";

import "validate/validate.proto";

message AuthReply{
  uint32 user_id = 1;
  uint32 app_id = 2;
  string app_keyword = 3;
  uint32 channel_id = 4;
}

message AllLoginPlatformReply{
  message Platform{
    string platform = 1;
    string name = 2;
  }
  repeated Platform list = 1;
}

message LoginByPasswordRequest {
  string username = 1[(validate.rules).string = {min_len:1}];
  string password = 2[(validate.rules).string = {min_len:1}];
  string captcha = 3[(validate.rules).string = {min_len:1}];
  string captcha_id = 4[(validate.rules).string = {min_len:1}];
  string app = 5[(validate.rules).string = {min_len:1}];
}

message RegisterUsernameCheckRequest {
  string username = 1[(validate.rules).string = {min_len:1}];
}

message RegisterUsernameCheckReply {
  bool allow = 1;
}

message RegisterByPasswordRequest {
  string username = 1[(validate.rules).string = {min_len:6}];
  string password = 2[(validate.rules).string = {min_len:1}];
  string captcha = 3[(validate.rules).string = {min_len:1}];
  string captcha_id = 4[(validate.rules).string = {min_len:1}];
  string app = 5[(validate.rules).string = {min_len:1}];
}

message RegisterReply{
  uint32 id = 1;
  string token = 2;
}

message LoginReply {
  string token = 1;
}

message ImageCaptchaReply {
  string id = 1;
  uint32 expire = 2;
  string base64 = 3;
}

message BindByEmailRequest {
  string email = 1[(validate.rules).string = {min_len:1}];
  string captcha = 3[(validate.rules).string = {min_len:1}];
  string captcha_id = 4[(validate.rules).string = {min_len:1}];
  string app = 5[(validate.rules).string = {min_len:1}];
}

message LoginByEmailRequest {
  string email = 1[(validate.rules).string = {min_len:1}];
  string captcha = 3[(validate.rules).string = {min_len:1}];
  string captcha_id = 4[(validate.rules).string = {min_len:1}];
  string app = 5[(validate.rules).string = {min_len:1}];
}

message RegisterByEmailRequest {
  string email = 1[(validate.rules).string = {min_len:1}];
  string captcha = 3[(validate.rules).string = {min_len:1}];
  string captcha_id = 4[(validate.rules).string = {min_len:1}];
  string app = 5[(validate.rules).string = {min_len:1}];
}

message LoginEmailCaptchaRequest{
  string email = 1[(validate.rules).string = {email:true}];
}

message BindEmailCaptchaRequest{
  string email = 1[(validate.rules).string = {email:true}];
}

message RegisterEmailCaptchaRequest{
  string email = 1[(validate.rules).string = {email:true}];
}

message EmailCaptchaReply {
  string id = 1;
  uint32 expire = 2;
}

message AuthRequest{
  string path = 1[(validate.rules).string = {min_len:0}];
  string method = 2[(validate.rules).string = {min_len:0}];
}